--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
     <nav>
        <a href="index.html" id="logo">The 3D Hub</a>
        <ul class="navmenu">
-           <li>Link one</li>
-           <li>Link two</li>
-           <li>Link three</li>
+           <li><a href="#introduction" class="menu"> Introduction</a></li>
+           <li><a href="#showImages" class="menu"> Created renders</a></li>
+           <li><a href="#quoteSection" class="menu"> Quote section</a></li>
        </ul>
     </nav>
-    <header>
-        <h1>The 3D Hub website</h1>
-        <p>Created by Kitti</p>
-        <button>Sign up</button>
-        <video width="520 px" autoplay muted loop>
-            <source src="/pics/render1.mkv" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
+    <header class="introduction">
+        <div class="introLeft">
+            <h1>The 3D Hub website</h1>
+            <p>Created by Kitti</p>
+            <button>Sign up!</button>
+        </div>
+
+            <video autoplay muted loop class="introRight">
+                <source src="/pics/render1.mkv" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
+
+
     </header>
-    <section>
+    <section class="showImages">
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
         <img src="/pics/couch.png" alt="couch render" class="section1 images">
         <p class="section1 text">This is a couch created in Blender</p>
@@ -37,11 +42,11 @@
         <img src="/pics/well3-j.jpg" alt="well render" class="section1 images">
         <p class="section1 text">This is a medieval well created in Blender</p>
     </section>
-    <section>
+    <section class="quoteSection">
         <h3 class="quote">/"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique, libero vel congue tincidunt, lectus magna facilisis tellus, vel laoreet turpis nisl eu eros. Integer lacinia cursus velit vitae mollis. Proin magna tellus, elementum sed nibh sit amet, fermentum faucibus ante./"</h3>
         <p id="author">Someone</p>
     </section>
-    <section>
+    <section class="actionSection">
         <div>
             <h3 class="action">Call to action!</h3>
             <p class="action">Sign up for something awesome.</p>
