quote section done

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <nav>
        <a href="index.html" id="logo">The 3D Hub</a>
        <ul class="navmenu">
-           <li><a href="#introduction" class="menu"> Introduction</a></li>
-           <li><a href="#showImages" class="menu"> Created renders</a></li>
-           <li><a href="#quoteSection" class="menu"> Quote section</a></li>
+           <li><a href="#nav1" class="menu"> Introduction</a></li>
+           <li><a href="#nav2" class="menu"> Created renders</a></li>
+           <li><a href="#nav3" class="menu"> Quote section</a></li>
        </ul>
     </nav>
-    <header class="introduction">
+    <header class="introduction" id="nav1">
         <div class="introLeft">
             <h1>The 3D Hub website</h1>
-            <p>Created by Kitti</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer est sapien, </p>
             <button>Sign up!</button>
         </div>
 
@@ -31,19 +31,31 @@
 
 
     </header>
-    <section class="showImages">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-        <img src="/pics/couch.png" alt="couch render" class="section1 images">
-        <p class="section1 text">This is a couch created in Blender</p>
-        <img src="/pics/gomba1.png" alt="mushroom render" class="section1 images">
-        <p class="section1 text">This is a mushroom created in Blender</p>
-        <img src="/pics/untitled4.png" alt="sea shack render" class="section1 images">
-        <p class="section1 text">This is a sea shack created in Blender</p>
-        <img src="/pics/well3-j.jpg" alt="well render" class="section1 images">
-        <p class="section1 text">This is a medieval well created in Blender</p>
+    <section class="showImages" id="nav2">
+        <h2 class="imageReelTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <div class="imagesReel">
+            <div>
+                <img src="/pics/couch.png" alt="couch render" class="section1 images">
+                <p class="section1 text">This is a couch created in Blender</p>
+            </div>
+            <div>
+    
+                <img src="/pics/gomba1.png" alt="mushroom render" class="section1 images">
+                <p class="section1 text">This is a mushroom created in Blender. I should cut this img. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div>
+    
+                <img src="/pics/untitled4.png" alt="sea shack render" class="section1 images">
+                <p class="section1 text">This is a sea shack created in Blender</p>
+            </div>
+            <div>
+                <img src="/pics/well3-j.jpg" alt="well render" class="section1 images">
+                <p class="section1 text">This is a medieval well created in Blender</p>
+            </div>
+        </div>
     </section>
-    <section class="quoteSection">
-        <h3 class="quote">/"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique, libero vel congue tincidunt, lectus magna facilisis tellus, vel laoreet turpis nisl eu eros. Integer lacinia cursus velit vitae mollis. Proin magna tellus, elementum sed nibh sit amet, fermentum faucibus ante./"</h3>
+    <section class="quoteSection" id="nav3">
+        <h3 class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique, libero vel congue tincidunt, lectus magna facilisis tellus, vel laoreet turpis nisl eu eros. Integer lacinia cursus velit vitae mollis. Proin magna tellus, elementum sed nibh sit amet, fermentum faucibus ante."</h3>
         <p id="author">Someone</p>
     </section>
     <section class="actionSection">
