footer done / TODO: responsivity, sticky nav

--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
         <h3 class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique, libero vel congue tincidunt, lectus magna facilisis tellus, vel laoreet turpis nisl eu eros. Integer lacinia cursus velit vitae mollis. Proin magna tellus, elementum sed nibh sit amet, fermentum faucibus ante."</h3>
         <p id="author">Someone</p>
     </section>
-    <section class="actionSection">
-        <div>
-            <h3 class="action">Call to action!</h3>
-            <p class="action">Sign up for something awesome.</p>
-            <button class="actionbutton action">Sign up</button>
-        </div>
-    </section>
+    <div class="whitespace">
+        <section class="actionSection">
+            <div>
+                <h3 class="action">Call to action!</h3>
+                <p class="action">Sign up for something awesome.</p>
+            </div>
+                <button class="actionbutton">Sign up</button>
+    
+        </section>
+    </div>
+
 
     <footer>
         <p> Design Copyright ©The Odin Project 2021 </p>
