relative path for images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
             <video autoplay muted loop class="introRight">
-                <source src="/pics/render1.mkv" type="video/mp4">
+                <source src="./pics/render1.mkv" type="video/mp4">
               Your browser does not support the video tag.
               </video>
 
@@ -35,21 +35,21 @@
         <h2 class="imageReelTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
         <div class="imagesReel">
             <div>
-                <img src="/pics/couch.png" alt="couch render" class="section1 images">
+                <img src="./pics/couch.png" alt="couch render" class="section1 images">
                 <p class="section1 text">This is a couch created in Blender</p>
             </div>
             <div>
     
-                <img src="/pics/gomba1.png" alt="mushroom render" class="section1 images">
+                <img src="./pics/gomba1.png" alt="mushroom render" class="section1 images">
                 <p class="section1 text">This is a mushroom created in Blender. I should cut this img. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
     
-                <img src="/pics/untitled4.png" alt="sea shack render" class="section1 images">
+                <img src="./pics/untitled4.png" alt="sea shack render" class="section1 images">
                 <p class="section1 text">This is a sea shack created in Blender</p>
             </div>
             <div>
-                <img src="/pics/well3-j.jpg" alt="well render" class="section1 images">
+                <img src="./pics/well3-j.jpg" alt="well render" class="section1 images">
                 <p class="section1 text">This is a medieval well created in Blender</p>
             </div>
         </div>
